# boc

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  ng-borc  ng-borc.cpp
component/boc/: CMakeLists.txt
component/bok/src/: ng-borc.cpp
component/core/: CMakeLists.txt
component/core/include/boc/core/: Linker.hpp  Package.hpp
component/core/include/bok/core/: BuildSystem.hpp  Command.hpp
component/core/src/: BuildCache.cpp  BuildSystem.cpp  Command.cpp  Compiler.cpp  Component.cpp  Linker.cpp  Package.cpp
src/: CMakeLists.txt
src/boc/: BuildCache.cpp  BuildCache.hpp  BuildSystem.cpp  Command.cpp  Compiler.cpp  Compiler.hpp  Component.cpp  Component.hpp  Linker.cpp  Package.cpp  ng-borc.cpp
test-data/cpp-core/01-hello-world/: main.cpp
test-data/cpp-core/02-word-counter/: WordCounter.cpp  WordList.cpp
